--- a/Demo.Web/Components/Layout/NavMenu.razor
+++ b/Demo.Web/Components/Layout/NavMenu.razor
@@ -5,6 +5,7 @@
         <FluentNavMenu Id="main-menu" Collapsible="true" Width="250" Title="Navigation menu" @bind-Expanded="expanded" CustomToggle="true">
             <FluentNavLink Href="/" Match="NavLinkMatch.All" Icon="@(new Icons.Regular.Size20.Home())" IconColor="Color.Accent">Home</FluentNavLink>
             <FluentNavLink Href="users" Icon="@(new Icons.Regular.Size24.People())" IconColor="Color.Accent">User</FluentNavLink>
+            <FluentNavLink Href="files" Icon="@(new Icons.Regular.Size24.People())" IconColor="Color.Accent">User</FluentNavLink>
             <FluentNavLink Href="info" Icon="@(new Icons.Regular.Size24.Info())" IconColor="Color.Accent">Info</FluentNavLink>
         </FluentNavMenu>
     </nav>
