Styling demo on homepage wit css

--- a/Demo.Web/Components/Pages/Home.razor
+++ b/Demo.Web/Components/Pages/Home.razor
@@ -1,7 +1,36 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Demo/Home</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new Fluent app.
+<div class="card-container">
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+</div>
+<div class="card-container-flex">
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+    <div class="card">A</div>
+</div>
