--- a/Demo.Web/Components/Pages/Users.razor
+++ b/Demo.Web/Components/Pages/Users.razor
@@ -12,7 +12,7 @@
 <PageTitle>User</PageTitle>
 
 <h1>Users</h1>
-<FluentButton OnClick="@AddUser"></FluentButton>
+<FluentButton OnClick="@AddUser">Add John Doe</FluentButton>
 
 
 @if (users == null)
