Optional login for some pages

--- a/Demo.Web/Components/Pages/FilesUpAndDown.razor
+++ b/Demo.Web/Components/Pages/FilesUpAndDown.razor
@@ -1,5 +1,7 @@
 ﻿@page "/files"
+@using Microsoft.AspNetCore.Authorization
 @rendermode InteractiveServer
+@attribute [Authorize]
 
 <h3>FilesUpAndDown</h3>
 
