--- a/Demo.Web/Components/Layout/MainLayout.razor
+++ b/Demo.Web/Components/Layout/MainLayout.razor
@@ -1,8 +1,13 @@
-﻿@inherits LayoutComponentBase
+﻿@using Microsoft.AspNetCore.Components.Authorization
+@inherits LayoutComponentBase
 
 <FluentLayout>
     <FluentHeader>
-        Demo
+        Demo Application
+        <FluentSpacer/>
+        <AuthorizeView><FluentLabel Style="color:lightgray;">@context.User?.Identity?.Name</FluentLabel></AuthorizeView>
+        <FluentSpacer />
+        <AuthorizeView><FluentLabel Style="color:lightgray;">@context.User?.Identity?.Name</FluentLabel></AuthorizeView>
     </FluentHeader>
     <FluentStack Class="main" Orientation="Orientation.Horizontal" Width="100%">
         <NavMenu />
