--- a/Demo.Web/Components/Pages/Users.razor
+++ b/Demo.Web/Components/Pages/Users.razor
@@ -2,9 +2,11 @@
 @using Demo.Application.Users
 @using Demo.Core.Models
 @using MediatR
+@using Microsoft.AspNetCore.Authorization
 
 @rendermode InteractiveServer
 @attribute [OutputCache(Duration = 5)]
+@attribute [Authorize]
 
 @inject UsersApiClient UsersApi
 @inject ISender sender
